--- a/Accounts/templates/update_profile.html
+++ b/Accounts/templates/update_profile.html
@@ -4,28 +4,23 @@
 {% endblock %}
 {% block body %}{% endblock %}
 {% block form_content2 %}
-    <form method="post" class="box-section">
+    <form method="post" class="box-section" enctype="multipart/form-data">
         {% csrf_token %}
         <label>
             <input type="text" name="user_name" value="{{ user_name }}" hidden/>
         </label>
         <label>
-            <input type="text" name="acc_type" value="{{ acc_type }}" hidden/>
+            <input type="text" name="form_name" value="{{ form_name }}" hidden/>
         </label>
-        {% if acc_type == 'staff' %}
+        {% if form_name == 'UserProfileForm' %}
+            <h2 class="text-center">Updating User Profile - {{ user_name }}</h2>
+        {% elif form_name == 'StaffAccountForm' %}
             <h2 class="text-center">Updating Staff Profile - {{ user_name }}</h2>
-        {% elif acc_type == 'student' %}
+        {% elif form_name == 'StudentInfoForm' %}
             <h2 class="text-center">Updating Student Profile - {{ user_name }}</h2>
         {% endif %}
         <hr class="my-3"/>
-        {% if error %}
-            <div class="alert alert-danger">
-                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                {% for error_msg in  error %}
-                    <strong>{{ error_msg }}<br/></strong>
-                {% endfor %}
-            </div>
-        {% endif %}
+
         {% for field in form %}
             <div class="form-group">
                 <div class="row">
@@ -41,7 +36,7 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-8">
-                <button type="submit" name="{{ acc_type }}" class="btn btn-primary btn-success">Update</button>
+                <button type="submit" name="{{ form_name }}" class="btn btn-primary btn-success">Update</button>
             </div>
         </div>
     </form>
