--- a/Dashboard/templates/dashboard_content.html
+++ b/Dashboard/templates/dashboard_content.html
@@ -3,7 +3,7 @@
     {% include 'dashboard_topbar.html' %}
     <div class="container wrapper">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <nav class="navbar navbar-expand-sm  navbar-light" style="background-color: #b1b8bd;">
                     <button class="btn btn-primary navbar-toggler" data-toggle="collapse" data-target="#sideBar">
                         =
@@ -11,10 +11,26 @@
                     {% include 'dashboard_sidebar.html' %}
                 </nav>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-9">
                 {% block rightPanel %}
                 {% endblock %}
             </div>
         </div>
     </div>
+    {% if error_msg %}
+        <div class="modal modal-success" id="ErrorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        {% for msg in error_msg %}
+                            {{ msg }}
+                        {% endfor %}
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
 {% endblock %}
