--- a/Dashboard/templates/dashboard_index.html
+++ b/Dashboard/templates/dashboard_index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+
     <style type="text/css">
         .sideBarNav {
             background: rgb(35, 1, 1);
@@ -17,13 +18,15 @@
 
         .wrapper {
             margin: 0;
-            padding: 0;
+            max-width: inherit;
+            padding: 0 10px 0 0;
         }
     </style>
     {% block styles %}
     {% endblock %}
 </head>
 <body>
+
 {% block body %}
 {% endblock %}
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -36,6 +39,18 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#bootstrapdatatable').DataTable({
+                "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
+                "iDisplayLength": 5
+            }
+        );
+    });
+</script>
+
 {% block scripts %}
 {% endblock %}
 </body>
